# DirectHit

./: Dockerfile  README.md  install_deps.sh  pyproject.toml  requirements.txt
directhit/: __init__.py  __main__.py  analyzer.py  net.py  runner.py  ui.py
tests/: test_analyzer.py
